--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
             <p>Quantity: ${product.quantity}</p>
             <p>Total Cost Price: $${product.cost * product.quantity}</p>
             <p>Total Retail Price: $${product.retail * product.quantity}
-            <button  class="btn btn-primary p-5" onclick="editProduct(${index})">Edit</button>
-            <button  class="btn btn-primary p-5 " onclick="removeProduct(${index})">Remove</button>
+            <button class="btn btn-primary p-5" onclick="editProduct(${index})">Edit</button>
+            <button class="btn btn-primary p-5 " onclick="removeProduct(${index})">Remove</button>
             `;
                 productListContainer.appendChild(productItem);
             });
@@ -102,12 +102,21 @@
                 displayProductList();
             }
         }
-
         function removeProduct(index) {
-            productList.splice(index, 1);
-            updateLocalStorage();
-            displayProductList();
+            const confirmation = confirm("Are you sure you want to delete this product?");
+
+            if (confirmation) {
+                productList.splice(index, 1);
+                updateLocalStorage();
+                displayProductList();
+            }
         }
+
+        // function removeProduct(index) {
+        //     productList.splice(index, 1);
+        //     updateLocalStorage();
+        //     displayProductList();
+        // }
 
         // function searchProduct() {
         //     const searchInput = document.getElementById("searchInput").value.toLowerCase();
