--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <div class="search-form">
                 <input class="form-control w-100 p-5 my-2" onkeyup="searchProduct()" type="text" id="searchInput" placeholder="Search Product">
-                <button class="btn btn-primary p-5 " onclick="searchProduct()">Search</button>
+                <!-- <button class="btn btn-primary p-5 " onclick="searchProduct()">Search</button> -->
             </div>
             <div class="container">
                 <div class="row">
